2022-02-12  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (ee-find-1stclassvideo-links): changed the part of
	the template that has a "(defun find-*video ...)".
	(find-1stclassvideos): added an (interactive).

	* eev-videolinks.el (find-eev2019video, find-eev2020video)
	(find-eev2021video, find-eev2021bvideo, find-eevnavvideo)
	(find-eevtemplvideo, find-eevfherelvideo, find-eevtestblsvideo)
	(find-eevvlinksvideo, find-oficina2021avideo)
	(find-oficina2021bvideo, find-2021workshop1video)
	(find-2021workshop2video, find-2021workshop3video)
	(find-2021workshop4video, find-2021workshop5video)
	(find-2021workshop6video, find-2021orgfornonusersvideo)
	(find-2021ffllvideo, find-2022eevmake0video)
	(find-2022findeevanggvideo, find-2022findelispintrovideo):
	redefined using the new template.
	(find-2021ssrvideo): new function.

2022-02-11  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (ee-find-1stclassvideo-links): new function.
	(find-1stclassvideos): new function.
	(find-1stclassvideo-links): use `ee-find-1stclassvideo-links' and
	`find-1stclassvideos'.

	* eev-elinks.el (ee-1stclassvideo-ask): new function.
	(ee-1stclassvideo-around-point-ask): use `ee-1stclassvideo-ask'.
	(ee-1stclassvideos): new function.

2022-02-10  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-videolinks.el (ee-1stclassvideos-info): Added dates,
	lengths, comments, and links to play the videos.

2022-01-28  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (find-advicebefore-links): new function.

2022-01-26  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-blinks.el (ee-shortdefp-maxlen-name)
	(ee-shortdefp-maxlen-def): new variables.
	(ee-shortdefp, ee-shortdef-symbols, ee-find-eeshortdefs-body)
	(ee-find-eeshortdefs-header, find-eeshortdefs): new functions.

2022-01-25  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-videolinks.el (find-2022findelispintrovideo): new function.

	* eev-intro.el (find-elisp-intro): added a mention to
	<http://angg.twu.net/find-elisp-intro.html>.